L/Gramatica/grammar.txt
S -> GLOBAL FUNCION_PRINCIPAL GLOBAL EOF
GLOBAL -> ESTRUCTURA GLOBAL
GLOBAL -> FUNCION GLOBAL
GLOBAL -> VAR_GLOBAL GLOBAL
GLOBAL -> epsilon
FUNCION_PRINCIPAL -> funcion_principal INSTRUCCIONES fin_principal
ESTRUCTURA -> estructura id ATRIBUTOS fin_estructura
ATRIBUTOS -> TIPO DEC_VARIABLE tk_pyc ATRIBUTOS
ATRIBUTOS -> epsilon
FUNCION -> funcion TIPO id tk_par_izq PARAMETROS tk_par_der hacer INSTRUCCIONES_FUNCION RETORNO fin_funcion
PARAMETROS -> TIPO id PARAMETROS2
PARAMETROS2 -> tk_coma TIPO id PARAMETROS2
PARAMETROS2 -> epsilon
PARAMETROS -> epsilon
VAR_GLOBAL -> TIPO DEC_VARIABLE tk_pyc
INSTRUCCIONES -> LEER INSTRUCCIONES
INSTRUCCIONES -> IMPRIMIR INSTRUCCIONES
INSTRUCCIONES -> SI INSTRUCCIONES
INSTRUCCIONES -> MIENTRAS INSTRUCCIONES
INSTRUCCIONES -> HACER_MIENTRAS INSTRUCCIONES
INSTRUCCIONES -> PARA INSTRUCCIONES
INSTRUCCIONES -> SELECCIONAR INSTRUCCIONES
INSTRUCCIONES -> DECLARACION_ASIGNACION INSTRUCCIONES
INSTRUCCIONES -> ROMPER INSTRUCCIONES
INSTRUCCIONES -> epsilon
TIPO -> id
TIPO -> PRIMITIVO
PRIMITIVO -> booleano
PRIMITIVO -> caracter
PRIMITIVO -> entero
PRIMITIVO -> real
PRIMITIVO -> cadena
LEER -> leer tk_par_izq IDENTIFICADOR tk_par_der tk_pyc
IMPRIMIR -> imprimir tk_par_izq IMPRESION tk_par_der tk_pyc
IMPRESION -> EXPRESION IMPRESION2
IMPRESION2 -> tk_coma EXPRESION IMPRESION2
IMPRESION2 -> epsilon
SI -> si tk_par_izq EXPRESION tk_par_der entonces INSTRUCCIONES_IF SI_NO fin_si
INSTRUCCIONES_IF -> LEER INSTRUCCIONES_IF2
INSTRUCCIONES_IF -> IMPRIMIR INSTRUCCIONES_IF2
INSTRUCCIONES_IF -> SI INSTRUCCIONES_IF2
INSTRUCCIONES_IF -> MIENTRAS INSTRUCCIONES_IF2
INSTRUCCIONES_IF -> HACER_MIENTRAS INSTRUCCIONES_IF2
INSTRUCCIONES_IF -> PARA INSTRUCCIONES_IF2
INSTRUCCIONES_IF -> SELECCIONAR INSTRUCCIONES_IF2
INSTRUCCIONES_IF -> DECLARACION_ASIGNACION INSTRUCCIONES_IF2
INSTRUCCIONES_IF -> ROMPER INSTRUCCIONES_IF2
INSTRUCCIONES_IF2 -> INSTRUCCIONES_IF
INSTRUCCIONES_IF2 -> epsilon
SI_NO -> si_no INSTRUCCIONES_IF2
SI_NO -> epsilon
MIENTRAS -> mientras tk_par_izq EXPRESION tk_par_der hacer INSTRUCCIONES_MIENTRAS fin_mientras
INSTRUCCIONES_MIENTRAS -> LEER INSTRUCCIONES_MIENTRAS
INSTRUCCIONES_MIENTRAS -> IMPRIMIR INSTRUCCIONES_MIENTRAS
INSTRUCCIONES_MIENTRAS -> SI INSTRUCCIONES_MIENTRAS
INSTRUCCIONES_MIENTRAS -> MIENTRAS INSTRUCCIONES_MIENTRAS
INSTRUCCIONES_MIENTRAS -> HACER_MIENTRAS INSTRUCCIONES_MIENTRAS
INSTRUCCIONES_MIENTRAS -> PARA INSTRUCCIONES_MIENTRAS
INSTRUCCIONES_MIENTRAS -> SELECCIONAR INSTRUCCIONES_MIENTRAS
INSTRUCCIONES_MIENTRAS -> DECLARACION_ASIGNACION INSTRUCCIONES_MIENTRAS
INSTRUCCIONES_MIENTRAS -> ROMPER INSTRUCCIONES_MIENTRAS
INSTRUCCIONES_MIENTRAS -> epsilon
HACER_MIENTRAS -> hacer INSTRUCCIONES_HACER_MIENTRAS
INSTRUCCIONES_HACER_MIENTRAS -> INSTRUCCIONES_HACER_MIENTRAS2 INSTRUCCIONES_HACER_MIENTRAS
INSTRUCCIONES_HACER_MIENTRAS -> mientras tk_par_izq EXPRESION tk_par_der INSTRUCCIONES_HACER_MIENTRAS3
INSTRUCCIONES_HACER_MIENTRAS3 -> hacer INSTRUCCIONES fin_mientras INSTRUCCIONES_HACER_MIENTRAS
INSTRUCCIONES_HACER_MIENTRAS3 -> tk_pyc
INSTRUCCIONES_HACER_MIENTRAS2 -> LEER
INSTRUCCIONES_HACER_MIENTRAS2 -> IMPRIMIR
INSTRUCCIONES_HACER_MIENTRAS2 -> DECLARACION_ASIGNACION
INSTRUCCIONES_HACER_MIENTRAS2 -> SI
INSTRUCCIONES_HACER_MIENTRAS2 -> SELECCIONAR
INSTRUCCIONES_HACER_MIENTRAS2 -> HACER_MIENTRAS
INSTRUCCIONES_HACER_MIENTRAS2 -> PARA
INSTRUCCIONES_HACER_MIENTRAS2 -> ROMPER
PARA -> para tk_par_izq EXP_PARA tk_pyc EXPRESION tk_pyc EXPRESION tk_par_der hacer INSTRUCCIONES_PARA fin_para
INSTRUCCIONES_PARA -> LEER INSTRUCCIONES_PARA
INSTRUCCIONES_PARA -> IMPRIMIR INSTRUCCIONES_PARA
INSTRUCCIONES_PARA -> SI INSTRUCCIONES_PARA
INSTRUCCIONES_PARA -> MIENTRAS INSTRUCCIONES_PARA
INSTRUCCIONES_PARA -> HACER_MIENTRAS INSTRUCCIONES_PARA
INSTRUCCIONES_PARA -> PARA INSTRUCCIONES_PARA
INSTRUCCIONES_PARA -> SELECCIONAR INSTRUCCIONES_PARA
INSTRUCCIONES_PARA -> DECLARACION_ASIGNACION INSTRUCCIONES_PARA
INSTRUCCIONES_PARA -> ROMPER INSTRUCCIONES_PARA
INSTRUCCIONES_PARA -> epsilon
EXP_PARA -> PRIMITIVO id tk_asig EXPRESION
EXP_PARA -> id tk_asig EXPRESION
SELECCIONAR -> seleccionar tk_par_izq EXPRESION tk_par_der entre CASOS fin_seleccionar
CASOS -> caso EXPRESION tk_dosp INSTRUCCIONES_CASOS CASOS2
CASOS -> defecto tk_dosp INSTRUCCIONES_CASOS
CASOS2 -> caso EXPRESION tk_dosp INSTRUCCIONES_CASOS CASOS2
CASOS2 -> defecto tk_dosp INSTRUCCIONES_CASOS
CASOS2 -> epsilon
INSTRUCCIONES_CASOS -> LEER INSTRUCCIONES_CASOS
INSTRUCCIONES_CASOS -> IMPRIMIR INSTRUCCIONES_CASOS
INSTRUCCIONES_CASOS -> SI INSTRUCCIONES_CASOS
INSTRUCCIONES_CASOS -> MIENTRAS INSTRUCCIONES_CASOS
INSTRUCCIONES_CASOS -> HACER_MIENTRAS INSTRUCCIONES_CASOS
INSTRUCCIONES_CASOS -> PARA INSTRUCCIONES_CASOS
INSTRUCCIONES_CASOS -> SELECCIONAR INSTRUCCIONES_CASOS
INSTRUCCIONES_CASOS -> DECLARACION_ASIGNACION INSTRUCCIONES_CASOS
INSTRUCCIONES_CASOS -> ROMPER INSTRUCCIONES_CASOS
INSTRUCCIONES_CASOS -> RETORNO INSTRUCCIONES_CASOS
INSTRUCCIONES_CASOS -> epsilon
DECLARACION_ASIGNACION -> PRIMITIVO DEC_VARIABLE tk_pyc
DECLARACION_ASIGNACION -> id DECLARACION_ASIGNACION2 tk_pyc
DECLARACION_ASIGNACION2 -> id ASIGNACION
DECLARACION_ASIGNACION2 -> IDESTRUC ASIGNACION
DECLARACION_ASIGNACION2 -> ASIGNACIONDEC
DECLARACION_ASIGNACION2 -> tk_asig id CALL
DECLARACION_ASIGNACION2 -> CALL
DECLARACION_ASIGNACION2 -> DEC_VARIABLE
ASIGNACIONDEC -> tk_asig EXPRESION
DEC_VARIABLE -> VARIABLE DEC_VARIABLE2
DEC_VARIABLE2 -> tk_coma VARIABLE DEC_VARIABLE2
DEC_VARIABLE2 -> epsilon
VARIABLE -> id ASIGNACION
ASIGNACION -> tk_asig EXPRESION
ASIGNACION -> epsilon
IDESTRUC -> tk_punto id IDESTRUC2
IDESTRUC2 -> tk_punto id IDESTRUC2
IDESTRUC2 -> epsilon
ROMPER -> romper tk_pyc
RETORNO -> retornar EXPRESION tk_pyc
CALL -> tk_par_izq PARAMETROS_FUNCION tk_par_der
PARAMETROS_FUNCION -> EXPRESION PARAMETROS_FUNCION2
PARAMETROS_FUNCION -> epsilon
PARAMETROS_FUNCION2 -> tk_coma EXPRESION PARAMETROS_FUNCION2
PARAMETROS_FUNCION2 -> epsilon
IDENTIFICADOR -> id IDENTIFICADOR2
IDENTIFICADOR2 -> tk_punto id IDENTIFICADOR2
IDENTIFICADOR2 -> epsilon
EXPRESION -> VALOR OPERADOR
OPERADOR -> tk_y EXPRESION
OPERADOR -> tk_o EXPRESION
OPERADOR -> tk_igual EXPRESION
OPERADOR -> tk_dif EXPRESION
OPERADOR -> tk_menor EXPRESION
OPERADOR -> tk_mayor EXPRESION
OPERADOR -> tk_menor_igual EXPRESION
OPERADOR -> tk_mayor_igual EXPRESION
OPERADOR -> tk_mas EXPRESION
OPERADOR -> tk_menos EXPRESION
OPERADOR -> tk_mult EXPRESION
OPERADOR -> tk_mod EXPRESION
OPERADOR -> tk_div EXPRESION
OPERADOR -> epsilon
VALOR -> tk_par_izq EXPRESION tk_par_der
VALOR -> IDCALL
VALOR -> NUMERO_PALABRA
VALOR -> BOOLEANO
VALOR -> tk_menos VALOR
VALOR -> tk_neg VALOR
NUMERO_PALABRA -> tk_entero
NUMERO_PALABRA -> tk_real
NUMERO_PALABRA -> tk_caracter
NUMERO_PALABRA -> tk_cadena
BOOLEANO -> verdadero
BOOLEANO -> falso
IDCALL -> id IDCALL2
IDCALL2 -> IDESTRUC
IDCALL2 -> CALL
IDCALL2 -> epsilon
INSTRUCCIONES_FUNCION -> LEER INSTRUCCIONES_FUNCION
INSTRUCCIONES_FUNCION -> IMPRIMIR INSTRUCCIONES_FUNCION
INSTRUCCIONES_FUNCION -> SI INSTRUCCIONES_FUNCION
INSTRUCCIONES_FUNCION -> MIENTRAS INSTRUCCIONES_FUNCION
INSTRUCCIONES_FUNCION -> HACER_MIENTRAS INSTRUCCIONES_FUNCION
INSTRUCCIONES_FUNCION -> PARA INSTRUCCIONES_FUNCION
INSTRUCCIONES_FUNCION -> SELECCIONAR INSTRUCCIONES_FUNCION
INSTRUCCIONES_FUNCION -> DECLARACION_ASIGNACION INSTRUCCIONES_FUNCION
INSTRUCCIONES_FUNCION -> ROMPER INSTRUCCIONES_FUNCION
INSTRUCCIONES_FUNCION -> epsilon
